fixed pop-up form overflow

--- a/CSS/libraryadmin.css
+++ b/CSS/libraryadmin.css
@@ -63,9 +63,8 @@ body {
     color: deepskyblue;
 }
 
-
 .active {
-    color:white;
+    color: white;
 }
 
 .menu:hover {
@@ -128,7 +127,6 @@ body {
     border: 1px solid black;
     text-align: center;
     color: #0097e3;
-
 }
 
 .price {
@@ -184,7 +182,7 @@ body {
 }
 
 #edit_link {
-    color:gray
+    color: gray
 }
 
 .lbl {
@@ -195,19 +193,19 @@ body {
     text-align: center !important;
 }
 
-.pop_up{
+.pop_up {
     width: 30%;
-	height: 40%;
+    height: 40%;
     border-radius: 15px;
     background-color: white;
     color: #0097e3;
     box-shadow: 0 0 10px dimgray;
-	display: none;
-	left: 30%;
-	padding-left: 5%;
-	padding-bottom: 5px;
-	padding-top: 5px;
-	padding-right: 5%;
+    display: none;
+    left: 30%;
+    padding-left: 5%;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 5%;
     margin-bottom: 10px;
     margin-top: 10px;
     top: 20%;
@@ -218,8 +216,8 @@ body {
     min-width: max-content;
 }
 
-#update_log{
-    min-height: 400px;
+#update_log {
+    height: 500px;
 }
 
 .blur {
@@ -257,6 +255,6 @@ body {
     cursor: pointer;
 }
 
-input label select button{
+input label select button {
     margin-bottom: 20px;
 }
